# bartender-ai-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  justfile  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
agents/_base/: Dockerfile  pyproject.toml
agents/_base/base_agent/: __init__.py  agent.py  llm.py  memory.py
agents/analyst/: Dockerfile  pyproject.toml
agents/analyst/src/: analyst.py  main.py
agents/developer/: Dockerfile  pyproject.toml
agents/developer/src/: developer.py  main.py
agents/orchestrator/: Dockerfile  pyproject.toml
agents/orchestrator/src/: correlator.py  health_monitor.py  main.py  skill_registry.py  task_router.py
agents/pm/: Dockerfile  pyproject.toml
agents/pm/src/: main.py  pm.py
agents/qa/: Dockerfile  pyproject.toml
agents/qa/src/: main.py  qa.py
agents/telegram-gateway/: Dockerfile  pyproject.toml
agents/telegram-gateway/src/: bot.py  main.py  normalizer.py  surfacer.py
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/src/: deps.py  main.py
apps/api/src/core/: config.py  lifespan.py
apps/api/src/middleware/: auth.py  cors.py  rate_limit.py
apps/api/src/routers/: __init__.py  auth.py  health.py
apps/api/src/services/: topic_guardrail.py
apps/web/: Dockerfile  package.json  pnpm-lock.yaml
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/lib/: socket.test.ts  socket.ts
apps/web/src/stores/: chat-store.ts
docs/: blueprint-diff-v2-vs-v1.md  system-blueprint-v1.0.md  system-blueprint-v2.0.md
infra/nats/: nats-server.conf
infra/qdrant/: config.yaml
scripts/: seed_models.py  seed_quests.py  setup.sh
