[tool.poetry]
name = "agent-base"
version = "0.1.0"
description = "Base library for Bartender AI swarm agents"
authors = ["Bartender AI Team"]
readme = "README.md"
packages = [{ include = "base_agent" }]

[tool.poetry.dependencies]
python = "^3.12"
shared = { path = "../../packages/shared-py", develop = true }
anthropic = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
