[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = "Agent Swarm Orchestrator — skill registry, task router, health monitor"
authors = ["Bartender AI Team"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
shared = { path = "../../packages/shared-py", develop = true }
agent-base = { path = "../_base", develop = true }
fastapi = "^0.111"
uvicorn = { version = "^0.30", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
