[tool.poetry]
name = "bartender-api"
version = "0.1.0"
description = "Bartender AI Assistant — FastAPI backend services"
authors = ["Bartender AI Team"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
shared = { path = "../../packages/shared-py", develop = true }
fastapi = "^0.111"
uvicorn = { version = "^0.30", extras = ["standard"] }
python-socketio = { version = "^5.11", extras = ["asyncio"] }
pydantic = "^2.7"
httpx = "^0.27"
python-jose = { version = "^3.3", extras = ["cryptography"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = "^0.27"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
